<resources>
    <string name="app_name">Dozy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="category">Categoria</string>
    <string name="trading">Trading</string>
    <string name="settings">Settings</string>
    <string name="add_task_title">Add Task</string>
    <string name="task_title_hint">Title</string>
    <string name="task_description_hint">Description</string>
    <string name="select_date">Date</string>
    <string name="no_repeat">Do not repeat</string>
    <string name="optional">(Optional)</string>
    <string name="check">Check</string>
    <string name="pending">Pending</string>
    <string name="every_weekday">Every weekday</string>
    <string name="every_day">Every day</string>
    <string name="save_button">Save</string>
    <string name="select_days">Select Days</string>


    //Fechas
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="today">Today</string>

    //hints
    <string name="search">Search</string>
    <string name="all">Todas</string>
    <string name="work">Trabajo</string>
    <string name="personal">Personal</string>

    //texts
    <string name="vs">Completados vs. Pendientes</string>
    <string name="vsValue">0/0</string>
    <string name="task">Tareas</string>


</resources>