<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_crem"
    tools:context=".ui.fragments.AddTask">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_bottom_title_style"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/poppins_black"
                android:text="@string/add_task_title"
                android:textColor="@color/dark_blue"
                android:textSize="35sp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_black"
            android:text="@string/task_title_hint"
            android:textColor="@color/strong_blue"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:errorIconTint="@color/mint_green"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_style_green"
                android:fontFamily="@font/poppins_black"
                android:textAllCaps="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_black"
            android:text="@string/task_description_hint"
            android:textColor="@color/strong_blue"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/description_task"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/round_style_green"
            android:hint="@string/optional"
            android:padding="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="35dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_black"
                android:text="@string/select_date"
                android:textColor="@color/strong_blue"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:background="@drawable/round_style_soft_blue"
                android:gravity="end"
                android:orientation="vertical"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp">

                <ImageButton
                    android:id="@+id/calendar_img_btn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:background="@drawable/ic_calendar"
                    android:backgroundTint="@color/soft_blue" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_day_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_blackitalic"
                android:text="@string/every_day"
                android:textColor="@color/strong_blue"
                app:buttonTint="@color/mint_green" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_week_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_blackitalic"
                android:text="@string/every_weekday"
                android:textColor="@color/strong_blue"
                app:buttonTint="@color/mint_green" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/round_top_style"
            android:orientation="vertical"
            android:paddingVertical="40dp"
            android:paddingHorizontal="60dp">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_task_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/round_style_yellow"
                android:fontFamily="@font/poppins_black"
                android:paddingHorizontal="65dp"
                android:text="@string/save_button"
                android:textColor="@color/strong_blue" />
        </LinearLayout>


    </LinearLayout>
</FrameLayout>