<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint_white"
    tools:context=".ui.fragments.CurrentTask">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/currentToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextViewTitleDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="56dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/today" />

            <ImageButton
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_history" />

        </LinearLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:background="@color/mint_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentToolBar">

            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                style="@style/searchBarCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"

                app:strokeWidth="0dp" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.search.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/categoriesLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <com.google.android.material.button.MaterialButton
                style="@style/buttonSelectCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:paddingHorizontal="16dp"
                android:text="@string/all"
                app:icon="@drawable/down_arrow" />

            <com.google.android.material.button.MaterialButton
                style="@style/buttonSelectCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:paddingHorizontal="16dp"
                android:text="@string/work"
                app:icon="@drawable/down_arrow" />

            <com.google.android.material.button.MaterialButton
                style="@style/buttonSelectCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:paddingHorizontal="16dp"
                android:text="@string/personal"
                app:icon="@drawable/down_arrow" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/cardVs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_card"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/textTask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoriesLinear">

            <TextView
                style="@style/TextViewCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/vs" />

            <TextView
                android:id="@+id/tvVersus"
                style="@style/TextViewCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/lexend_bold"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend_bold"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="12dp"
            android:text="@string/task"
            android:textColor="@color/dark_forest"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardVs" />

        <!-- RecyclerView de tareas -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTaskList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTask"
            tools:listitem="@layout/item_task" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>


